--- a/choicescreen.html
+++ b/choicescreen.html
@@ -10,7 +10,7 @@
 	<meta name="Author" content="On My Way">
 	<meta property="og:title" content="On My Way">
 	
-	<title>On My Way - Home</title>
+	<title>On My Way - Choices</title>
 
 </head>
 <body>
@@ -19,18 +19,27 @@
 
 <div id="textbox1">
 
-<h1>On My Way</h1>
+<h2>Choose your alerts:</h2>
 
-<h2>Who would you like to alert?</h2>
+<div id="list">
+	<nav>
+		<ul>
+			<li class="item">I'm 15 minutes away.</li>
+			<li class="item">I'm 10 minutes away.</li>
+			<li class="item">I'm 5 minutes away.</li>
+			<li class="item">I'm here.</li>
+			<li class="item">I'm outside, you can come now.</li>
+		</ul>
+	</nav>
 
-<div id="phone">Enter Phone Number Here</div>
+<div id="submit">Let's go!</div>
+
+</div> <!-- ends "list" -->
 
 </div> <!-- ends "textbox1" -->
 
-<!-- FOOTER -->
-<h5>
-  &copy On My Way, 2013. <a href="****LINK TO PRIVACY*****" target="_blank">Read privacy statement here.</a>
-</h5>
+<!--NO FOOTER -->
+
 
 </div> <!-- ends "screen" -->
 
