--- a/finalscreen.html
+++ b/finalscreen.html
@@ -10,7 +10,7 @@
 	<meta name="Author" content="On My Way">
 	<meta property="og:title" content="On My Way">
 	
-	<title>On My Way - Home</title>
+	<title>On My Way - Final Screen</title>
 
 </head>
 <body>
@@ -19,18 +19,16 @@
 
 <div id="textbox1">
 
-<h1>On My Way</h1>
+<h1>Consider it done!</h1>
 
-<h2>Who would you like to alert?</h2>
+<div id="submit">Get Driving</div>
 
-<div id="phone">Enter Phone Number Here</div>
+
 
 </div> <!-- ends "textbox1" -->
 
-<!-- FOOTER -->
-<h5>
-  &copy On My Way, 2013. <a href="****LINK TO PRIVACY*****" target="_blank">Read privacy statement here.</a>
-</h5>
+<!-- No FOOTER -->
+
 
 </div> <!-- ends "screen" -->
 
